--- a/LiberaryBook/appsettings.json
+++ b/LiberaryBook/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "Server=(localdb)\\ProjectModels;Database=LiberaryBook;Trusted_Connection=True;MultipleActiveResultSets=true"
+    "DefaultConnection": "Server=AMIRBODO\\SQLEXPRESS;Database=LiberaryBook;Trusted_Connection=True;MultipleActiveResultSets=true"
   },
   "Logging": {
     "LogLevel": {
